--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mini-shop-admin",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://localhost:44395",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -9,7 +10,9 @@
     "antd": "3.20.0",
     "axios": "^0.21.0",
     "bootstrap": "4.5.3",
+    "dayjs": "^1.9.7",
     "formik": "^2.2.1",
+    "immer": "^7.0.14",
     "lodash": "^4.17.20",
     "node-sass": "4.14.1",
     "react": "^17.0.1",
